--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "multer": "1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
+    "passport-naver": "^1.0.6",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
