--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/websockets": "^11.0.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "joi": "^17.13.3",
     "multer": "1.4.5-lts.1",
     "passport": "^0.7.0",
