--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "date-fns": "^4.1.0",
     "joi": "^17.13.3",
     "multer": "1.4.5-lts.1",
+    "nest-winston": "^1.10.2",
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
     "passport-naver": "^1.0.6",
@@ -47,7 +48,8 @@
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -59,6 +61,7 @@
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8.0.0",
