--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:user": "jest --testPathPattern=src/user --coverage --collectCoverageFrom=src/user/**"
+    "test:user": "jest --testPathPattern=src/user --coverage --collectCoverageFrom=src/user/**",
+    "test:auth": "jest --testPathPattern=src/auth --coverage --collectCoverageFrom=src/auth/**",
+    "test:post": "jest --testPathPattern=src/post --coverage --collectCoverageFrom=src/post/**",
+    "test:comment": "jest --testPathPattern=src/post/comment --coverage --collectCoverageFrom=src/post/comment/**"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
