feat : anniversary service and contoller test code

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "test:auth": "jest --testPathPattern=src/auth --coverage --collectCoverageFrom=src/auth/**",
     "test:post": "jest --testPathPattern=src/post --coverage --collectCoverageFrom=src/post/**",
     "test:comment": "jest --testPathPattern=src/post/comment --coverage --collectCoverageFrom=src/post/comment/**",
-    "test:plan": "jest --testPathPattern=src/couple/plan --coverage --collectCoverageFrom=src/couple/plan/**"
-
+    "test:plan": "jest --testPathPattern=src/couple/plan --coverage --collectCoverageFrom=src/couple/plan/**",
+    "test:anniversary": "jest --testPathPattern=src/couple/anniversary --coverage --collectCoverageFrom=src/couple/anniversary/**"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
