feat : chat service and gateway tes code

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:comment": "jest --testPathPattern=src/post/comment --coverage --collectCoverageFrom=src/post/comment/**",
     "test:plan": "jest --testPathPattern=src/couple/plan --coverage --collectCoverageFrom=src/couple/plan/**",
     "test:anniversary": "jest --testPathPattern=src/couple/anniversary --coverage --collectCoverageFrom=src/couple/anniversary/**",
-    "test:notification": "jest --testPathPattern=src/notification --coverage --collectCoverageFrom=src/notification/**"
+    "test:notification": "jest --testPathPattern=src/notification --coverage --collectCoverageFrom=src/notification/**",
+    "test:chat": "jest --testPathPattern=src/chat --coverage --collectCoverageFrom=src/chat/**"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
