--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test:anniversary": "jest --testPathPattern=src/couple/anniversary --coverage --collectCoverageFrom=src/couple/anniversary/**",
     "test:calendar": "jest --testPathPattern=src/couple/calendar --coverage --collectCoverageFrom=src/couple/calendar/**",
     "test:notification": "jest --testPathPattern=src/notification --coverage --collectCoverageFrom=src/notification/**",
-    "test:chat": "jest --testPathPattern=src/chat --coverage --collectCoverageFrom=src/chat/**"
+    "test:chat": "jest --testPathPattern=src/chat --coverage --collectCoverageFrom=src/chat/**",
+    "test:couple": "jest --testPathPattern=src/couple --coverage --collectCoverageFrom=src/couple/**"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
