--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^11.0.11",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/platform-socket.io": "^11.0.7",
@@ -48,6 +49,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
+    "ioredis": "^5.5.0",
     "joi": "^17.13.3",
     "multer": "1.4.5-lts.1",
     "nest-winston": "^1.10.2",
@@ -99,7 +101,8 @@
     ],
     "roots": [
       "src",
-      "<rootDir>/apps/"
+      "<rootDir>/apps/",
+      "<rootDir>/libs/"
     ],
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
@@ -124,7 +127,8 @@
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "moduleNameMapper": {
-      "src/(.*)": "<rootDir>/src/$1"
+      "src/(.*)": "<rootDir>/src/$1",
+      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
     }
   }
 }
