--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.1'
 
 services:
+  gateway:
+    build:
+      context: .
+      dockerfile: ./apps/gateway/Dockerfile
+      target: development
+    command: pnpm run start:dev gateway
+    env_file:
+      - ./apps/gateway/.env
+    ports:
+      - '3000:3000'
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+      
   user:
     build:
       context: .
@@ -12,8 +26,6 @@ services:
         condition: service_healthy
     env_file:
       - ./apps/user/.env
-    ports:
-      - '3001:3000'
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
@@ -46,8 +58,6 @@ services:
         condition: service_healthy
     env_file:
       - ./apps/couple/.env
-    ports:
-      - '3002:3000'
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
@@ -74,8 +84,6 @@ services:
       dockerfile: ./apps/chat/Dockerfile
       target: development
     command: pnpm run start:dev chat
-    ports:
-      - '3003:3000'
     depends_on:
       mongo_chat:
         condition: service_healthy
@@ -108,8 +116,6 @@ services:
       dockerfile: ./apps/notification/Dockerfile
       target: development
     command: pnpm run start:dev notification
-    ports:
-      - '3004:3000'
     depends_on:
       mongo_notification:
         condition: service_healthy
