--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.0.7",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.5",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
