--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "test:couple": "jest --testPathPattern=src/couple --coverage --collectCoverageFrom=src/couple/**"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
