refactor : 테스트 환경 수정

--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
       "ts"
     ],
     "roots": [
-      "src"
+      "<rootDir>/src"
     ],
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
