--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   nginx:
@@ -23,13 +23,13 @@ services:
       target: ${BUILD_TARGET}
     env_file:
       - .env
-    expose:
-      - "3000"
+    ports:
+      - "3000:3000"
     depends_on:
       postgres_dulit:
         condition: service_healthy
     restart: always
-    command: ['node', 'dist/main.js']
+    command: ["node", "dist/main.js"]
     volumes:
       - /usr/src/app/node_modules # node_modules는 컨테이너 내에서 관리
     # 리소스 제한 추가
@@ -42,12 +42,12 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
-    expose:
-      - "5432"
+    ports:
+      - "5433:5432" # 포트 변경
     volumes:
       - ./postgres/data:/var/lib/postgresql/data # 데이터 유지
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 5s
       retries: 10
